{{$NEXT}}

0.09010   2011-10-24 11:25:25 America/Los_Angeles

 * added get_cvterm and get_cvterm_or_die convenience methods directly
   to the schema object, since cvterms are so pervasive in chado
 * added to_range to Featureloc class that makes a Bio::Range object
   for that location.

0.09000   2011-09-22 09:27:36 America/Los_Angeles

 * update for Chado 1.2, including:
    + add classes for new Chado 1.2 tables chadoprop (Cv::Chadoprop)
      genotypeprop (Genetic::Genotypeprop)
    + adds type to nd_protocol (NaturalDiversity::NdProtocol)
    + adds name column to phenotype table (Phenotype::Phenotype)
    + corrects misspelled name of stock_relationship_id column
      accessor for stock_relationship_cvterm
      (Stock::StockRelationshipCvterm), adds stock_relationship DBIC
      relation

0.08200   2011-09-19 09:35:03 America/Los_Angeles

 * fix inconsistencies in behavior for features with null residues
   and/or seqlens

0.08100   2011-03-21 16:01:00 America/Los_Angeles

 * add support for literal sql in property values set using
   create_*props helper functions
 * add 'features' many-to-many relation to the Synonym result class.
 * add 'synonyms' many-to-many relation to the Feature result class.
 * add new class for stock_cvtermprop table, and new is_not and rank
   columns for stock_cvterm

0.08002   2011-02-22 11:17:13 America/Los_Angeles

 * Added support for new cvprop table.
 * Added plugin_add_relationship class method to Bio::Chado::Schema
   main class, which makes it possible to do BCS plugins: sets of
   classes in the Bio::Chado::Schema namespace that are loaded as part
   of BCS.  plugin_add_relationship lets plugins inject relationships
   into the core BCS classes.

0.07300   2010-11-28 17:19:08 PST8PDT

 * Add convenient featureloc length() method.
 * Add better support for large sequences: a subseq() method to
   Feature class with support for checking a 'large_residues'
   featureprop for sequence, and doing substring calls on that.
