@@ -5,7 +5,7 @@ use warnings;
 use FindBin;
 use lib "$FindBin::RealBin/../lib";
 
-use Test::More tests => 36;
+use Test::More tests => 38;
 use Test::Exception;
 use Test::Warn;
 use Bio::Chado::Schema::Test;
@@ -53,6 +53,7 @@ $schema->txn_do(sub{
             });
 
     is( $grandpa->subseq( 3, 5 ), 'TAG', 'subseq on regular residues works' );
+    is( $grandpa->subseq_concat( [3,5], [8,10] ), 'TAGTCA', 'subseq_concat on regular residues works' );
     is( $grandpa->trunc( 3, 5 )->seq, 'TAG', 'trunc on regular residues works' );
 
     my $parent = $schema->resultset('Sequence::Feature')
@@ -72,6 +73,7 @@ $schema->txn_do(sub{
        );
 
     is( $parent->subseq( 3, 5 ), 'TAG', 'subseq on large_residues prop works' );
+    is( $parent->subseq_concat( [3,5], [8,10] ), 'TAGTCA', 'subseq_concat on large_residues works' );
     is( $parent->trunc( 3, 5 )->seq, 'TAG', 'subseq on large_residues prop works' );
     is( $parent->trunc( 3, 5 )->id, $parent->name, 'subseq on large_residues has proper name' );
 
